# cyber_rock_assignment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  makefile
.devcontainer/: devcontainer.json
Client/: Dockerfile  Makefile  client.cpp  client.hpp  main.cpp
Common/: crypto_utils.hpp  nanopb_utils.hpp  range_proof_utils.hpp  transport.hpp
Server/: Dockerfile  Makefile  main.cpp  server.cpp  server.hpp
proto/: auth.options  auth.proto  data.options  data.proto  message.proto  range.options  range.proto  sensor.options  sensor.proto
